// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> should render 1`] = `
<Container__WallContainer>
  <Container__WallLogo
    height={42}
  />
  <Container__WallDialog>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            autoFocus={true}
            name="username"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <Checkbox
          checked={false}
          disabled={false}
          label="Remember Me"
          onClick={[Function]}
        />
      </Box__BoxGroupSection>
      <Login__LoginFooter>
        <Button
          color="blue"
          disabled={false}
          tipPlacement="top"
          type="submit"
        >
          Login
        </Button>
        <span />
      </Login__LoginFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;

exports[`<Login /> should render checked remember checkbox 1`] = `
<Container__WallContainer>
  <Container__WallLogo
    height={42}
  />
  <Container__WallDialog>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            autoFocus={true}
            name="username"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <Checkbox
          checked={false}
          disabled={false}
          label="Remember Me"
          onClick={[Function]}
        />
      </Box__BoxGroupSection>
      <Login__LoginFooter>
        <Button
          color="blue"
          disabled={false}
          tipPlacement="top"
          type="submit"
        >
          Login
        </Button>
        <span />
      </Login__LoginFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;

exports[`<Login /> should render checked remember checkbox 2`] = `
<Container__WallContainer>
  <Container__WallLogo
    height={42}
  />
  <Container__WallDialog>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            autoFocus={true}
            name="username"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <Checkbox
          checked={true}
          disabled={false}
          label="Remember Me"
          onClick={[Function]}
        />
      </Box__BoxGroupSection>
      <Login__LoginFooter>
        <Button
          color="blue"
          disabled={false}
          tipPlacement="top"
          type="submit"
        >
          Login
        </Button>
        <span />
      </Login__LoginFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;

exports[`<Login /> should render filled username and password fields 1`] = `
<Container__WallContainer>
  <Container__WallLogo
    height={42}
  />
  <Container__WallDialog>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            autoFocus={true}
            name="username"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <Checkbox
          checked={false}
          disabled={false}
          label="Remember Me"
          onClick={[Function]}
        />
      </Box__BoxGroupSection>
      <Login__LoginFooter>
        <Button
          color="blue"
          disabled={false}
          tipPlacement="top"
          type="submit"
        >
          Login
        </Button>
        <span />
      </Login__LoginFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;

exports[`<Login /> should render filled username and password fields 2`] = `
<Container__WallContainer>
  <Container__WallLogo
    height={42}
  />
  <Container__WallDialog>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            autoFocus={true}
            name="username"
            onChange={[Function]}
            value="bob"
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <Checkbox
          checked={false}
          disabled={false}
          label="Remember Me"
          onClick={[Function]}
        />
      </Box__BoxGroupSection>
      <Login__LoginFooter>
        <Button
          color="blue"
          disabled={false}
          tipPlacement="top"
          type="submit"
        >
          Login
        </Button>
        <span />
      </Login__LoginFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;

exports[`<Login /> should render filled username and password fields 3`] = `
<Container__WallContainer>
  <Container__WallLogo
    height={42}
  />
  <Container__WallDialog>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            autoFocus={true}
            name="username"
            onChange={[Function]}
            value="bob"
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value="foobar"
          />
        </InputGroup>
        <Checkbox
          checked={false}
          disabled={false}
          label="Remember Me"
          onClick={[Function]}
        />
      </Box__BoxGroupSection>
      <Login__LoginFooter>
        <Button
          color="blue"
          disabled={false}
          tipPlacement="top"
          type="submit"
        >
          Login
        </Button>
        <span />
      </Login__LoginFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;
